Fix truncate mobilization name to show in only one line in mobilizations list. #212

--- a/app/scripts/Mobilization/components/scss/mobilization-list-item.scss
+++ b/app/scripts/Mobilization/components/scss/mobilization-list-item.scss
@@ -19,6 +19,8 @@
     }
 
     .list-item-name {
+      font-size: .95vw;
+
       .table { height: $avatarHeight; }
     }
 
